Consistent naming of Client API Key Fixed some bugs Addressed review comments

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -39,7 +39,7 @@
                     <div class="row">
                         <div class="col">
                             <ol>
-                                <li>First seach for a participant with the requested name from the Jira ticket.</li>
+                                <li>Search for a participant with the requested name from the Jira ticket.</li>
                                 <li>If a site exists use the Site Id to update the site if necessary.</li>
                                 <li>Use the Site Id to create a client API key and secret if necessary.</li>
                             </ol>
@@ -53,9 +53,9 @@
                     <div class="row align-items-end">
                         <div class="col">
                             <div class="form-group">
-                                <label for="participantName">Participant / Client name</label>
+                                <label for="participantName">Participant name</label>
                                 <input type="text" class="form-control" id="participantName"
-                                    placeholder="Leave empty for all participants / clients">
+                                    placeholder="Leave empty for all participants">
                             </div>
                         </div>
                         <div class="col">
@@ -91,7 +91,7 @@
                         <table class="table table-bordered" id="searchResultsTable">
                             <thead>
                                 <th scope="col" class="col-1">Sites</th>
-                                <th scope="col" class="col-1">Clients</th>
+                                <th scope="col" class="col-1">Client API Keys</th>
                             </thead>
                             <tbody id="searchResultsTableBody">
                             </tbody>
@@ -104,11 +104,11 @@
                     <div class="row pt-1">
                         <div class="col">
                             <div class="row">
-                                <h5>Update Operations:</h5>
+                                <h5>Create / Update Operations:</h5>
                             </div>
                             <div class="row py-2">
                                 <div>
-                                    Use this to create new site, update existing sites or create new clients.
+                                    Use this to create a new site, update existing sites or create new Client API Key and Secrets.
                                 </div>
                             </div>
                             <div class="row">
@@ -321,7 +321,7 @@
                                     <form id="createClientForm">
                                         <div class="card card-body">
                                             <div class="form-group">
-                                                <h5>Create a new client</h5>
+                                                <h5>Create a new client API Key</h5>
 
                                                 <div>
                                                     <label for="createClient-workflow-name">Name:</label>
@@ -342,20 +342,20 @@
                                                         class="form-check-input" name="createClient-workflow-roles[]"
                                                         value="GENERATOR">
                                                     <label for="createClient-workflow-roles-GENERATOR">GENERATOR - for
-                                                        publishers123</label>
+                                                        publishers</label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input type="checkbox" id="createClient-workflow-roles-MAPPER"
                                                         class="form-check-input" name="createClient-workflow-roles[]"
                                                         value="MAPPER">
-                                                    <label for="createClient-workflow-roles-GENERATOR">MAPPER - for
+                                                    <label for="createClient-workflow-roles-MAPPER">MAPPER - for
                                                         publishers</label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input type="checkbox" id="createClient-workflow-roles-ID_READER"
                                                         class="form-check-input" name="createClient-workflow-roles[]"
                                                         value="ID_READER">
-                                                    <label for="createClient-workflow-roles-GENERATOR">ID_READER - for
+                                                    <label for="createClient-workflow-roles-ID_READER">ID_READER - for
                                                         advertisers, data providers</label>
                                                 </div>
                                                 <div class="form-check pt-3 pb-2">
@@ -582,9 +582,11 @@ ${JSON.stringify(client, null, 2)} `;
             });
 
             const search = (name) => {
+                clearFormsAndShowCollapsed([]);
                 $("#searchSiteNoSiteFoundAlert").collapse('hide');
                 $("#searchSiteErrorAlert").collapse('hide');
                 $("#searchResultsTableBody").empty();
+                
 
                 doApiCallWithCallback("GET", "/api/site/list", (text) => {
                     const searchList = JSON.parse(text);
