Added AppNames to cstg Fixed bugs

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -172,8 +172,7 @@
                                                         for="createSite-workflow-clientTypes-PUBLISHER">PUBLISHER</label>
                                                 </div>
                                                 <div class="py-2">
-                                                    <label for="createSite-workflow-description">Description
-                                                        (Optional):</label>
+                                                    <label for="createSite-workflow-description">Description (Optional):</label>
                                                     <input type="text" id="createSite-workflow-description"
                                                         class="form-control" name="createSite-workflow-description">
                                                 </div>
@@ -285,8 +284,7 @@
                                                 </div>
 
                                                 <div class="py-2">
-                                                    <label for="updateSite-workflow-afterSearch-description">Description
-                                                        (Optional):</label>
+                                                    <label for="updateSite-workflow-afterSearch-description">Description (Optional):</label>
                                                     <input type="text" id="updateSite-workflow-afterSearch-description"
                                                         class="form-control"
                                                         name="updateSite-workflow-afterSearch-description">
@@ -341,31 +339,26 @@
                                                     <input type="checkbox" id="createClient-workflow-roles-GENERATOR"
                                                         class="form-check-input" name="createClient-workflow-roles[]"
                                                         value="GENERATOR">
-                                                    <label for="createClient-workflow-roles-GENERATOR">GENERATOR - for
-                                                        publishers</label>
+                                                    <label for="createClient-workflow-roles-GENERATOR">GENERATOR - for publishers</label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input type="checkbox" id="createClient-workflow-roles-MAPPER"
                                                         class="form-check-input" name="createClient-workflow-roles[]"
                                                         value="MAPPER">
-                                                    <label for="createClient-workflow-roles-MAPPER">MAPPER - for
-                                                        publishers</label>
+                                                    <label for="createClient-workflow-roles-MAPPER">MAPPER - for publishers</label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input type="checkbox" id="createClient-workflow-roles-ID_READER"
                                                         class="form-check-input" name="createClient-workflow-roles[]"
                                                         value="ID_READER">
-                                                    <label for="createClient-workflow-roles-ID_READER">ID_READER - for
-                                                        advertisers, data providers</label>
+                                                    <label for="createClient-workflow-roles-ID_READER">ID_READER - for advertisers, data providers</label>
                                                 </div>
                                                 <div class="form-check pt-3 pb-2">
                                                     <input type="checkbox" class="form-check-input"
                                                         id="createClient-workflow-roles-SHARER"
                                                         name="createClient-workflow-roles[]" value="SHARER">
                                                     <label for="createClient-workflow-roles-SHARER"
-                                                        class="form-check-label">Does it additionally need the SHARER
-                                                        role? Be sure that the client definitely needs this. Most
-                                                        don't.</label>
+                                                        class="form-check-label">Does it additionally need the SHARER role? Be sure that the client definitely needs this. Most don't.</label>
                                                 </div>
                                                 <a href="#create" class="btn-primary btn"
                                                     id="createClient-workflow-submit">Create</a>
@@ -373,7 +366,7 @@
                                                 <div class="collapse" id="createClientOutput">
                                                     <div class="pt-2">
                                                         <div class="py-2">Please copy and paste this to a new <a
-                                                                href="https://tradesecrets.adsrvr.org/secrets/new">TradeSecret</a>:
+                                                                href="https://tradesecrets.adsrvr.org/secrets/new" target="_blank">TradeSecret</a>:
                                                         </div>
                                                         <div class="alert alert-secondary">
                                                             <button type="button" class="btn float-end"
@@ -384,10 +377,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="pt-2">
-                                                        <div class="py-2">Please copy and paste this into a comment on
-                                                            the
-                                                            JIRA
-                                                            ticket:
+                                                        <div class="py-2">Please copy and paste this into a comment on the JIRA ticket:
                                                         </div>
                                                         <div class="alert alert-secondary">
                                                             <button type="button" class="btn float-end"
@@ -398,10 +388,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="pt-2">
-                                                        <div class="py-2">This is the output for reference. You should
-                                                            not
-                                                            need
-                                                            to copy this.
+                                                        <div class="py-2">This is the output for reference. You should not need to copy this.
                                                         </div>
                                                         <div class="alert alert-dark">
                                                             <pre id="fullClientOutputSpace"
