--- a/webroot/index.html
+++ b/webroot/index.html
@@ -18,7 +18,7 @@ Logged in as <span id="loginEmail"></span>
 <br>
 </div>
 
-<h3>On-call Support Workflow</h3>
+<h3 class="ro-adm" style="display: none">On-call Support Workflow</h3>
 <ul>
     <li class="ro-adm" style="display: none"><a href="/adm/oncall/generate-api-key-secret.html">Generate API Key/Secret</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/oncall/generate-cstg-keypair.html">Generate CSTG Keypair</a></li>
