added text to create site for ctsg

--- a/webroot/adm/oncall/generate-cstg-keypair.html
+++ b/webroot/adm/oncall/generate-cstg-keypair.html
@@ -153,6 +153,7 @@
                                                         class="form-check-input"
                                                         name="createSite-workflow-clientTypes[]" value="PUBLISHER">
                                                     <label for="createSite-workflow-clientTypes-PUBLISHER">Is this participant a publisher? Only publishers are allowed to use CSTG.</label>
+                                                    <div>If the participant is an Advertiser, check <a href="https://atlassian.thetradedesk.com/confluence/display/UID2/UID2+CSTG+How+to+create+a+new+client+side+keypair" target="_blank">UID2 CSTG How to create a new client side keypair</a> for details</div>
                                                 </div>
                                                 <a href="#create" class="btn btn-primary pt-2"
                                                     id="createSite-workflow-submit">Create</a>
