--- a/webroot/adm/oncall/search.html
+++ b/webroot/adm/oncall/search.html
@@ -2,8 +2,7 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -50,7 +49,7 @@
 
         </div>
     </div>
-    <script language="JavaScript">
+    <script>
         $(document).ready(function () {
             $('#doSearch').on('click', function () {
                 var keyString = $('#key').val();
@@ -69,6 +68,8 @@
             }
         });
     </script>
+    <script src="../../js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
