--- a/webroot/index.html
+++ b/webroot/index.html
@@ -20,6 +20,7 @@ Logged in as <span id="loginEmail"></span>
 
 <h3 class="ro-adm" style="display: none">On-call Support Workflow</h3>
 <ul>
+    <li class="ro-adm" style="display: none"><a href="/adm/oncall/participant-summary.html">Participant Summary</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/oncall/generate-api-key-secret.html">Generate API Key/Secret</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/oncall/generate-cstg-keypair.html">Generate CSTG Keypair</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/oncall/search.html">Key and Secret Search</a></li>
