--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -43,6 +43,23 @@
                 </div>
                 <div class="row px-2">
                     <div class="col">
+                        <h5>Site Information</h5>
+                        <pre id="siteErrorOutput"></pre>
+                        <pre id="siteStandardOutput"></pre>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <h5>Domain Names</h5>
+                            <pre id="domainNamesStandardOutput"></pre>
+                        </div>
+                        <div>
+                            <h5>App Names</h5>
+                            <pre id="appNamesStandardOutput"></pre>
+                        </div>
+                    </div>
+                </div>
+                <div class="row px-2">
+                    <div class="col">
                         <h5>Participant API Keys</h5>
                         <pre id="participantKeysErrorOutput"></pre>
                         <pre id="participantKeysStandardOutput"></pre>
