--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -3,7 +3,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <link href="../../css/participantSummary.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -23,62 +23,62 @@
                     <div class="col">
                         <h5>Search</h5>
                     </div>
-                </div>
-                <div class="row align-items-end">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="key">Site Id or Name:</label>
-                            <input type="text" class="form-control" id="key">
-                            <pre id="siteSearchErrorOutput"></pre>
+                    <div class="align-items-end">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="key">Site Id or Name:</label>
+                                <input type="text" class="form-control" id="key">
+                                <pre class="errorDiv" id="siteSearchErrorOutput"></pre>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <a href="#" class="btn btn-primary" id="doSearch">Search</a>
+                        <div class="col">
+                            <a href="#" class="btn btn-primary" id="doSearch">Search</a>
+                        </div>
                     </div>
                 </div>
                 <div class="row pt-3">
-                    <div class="col">
+                    <div class="col section">
                         <h5>Search Results:</h5>
                     </div>
                 </div>
                 <div class="row px-2">
-                    <div class="col">
+                    <div class="col section">
                         <h5>Site Information</h5>
-                        <pre id="siteErrorOutput"></pre>
+                        <pre class="errorDiv" id="siteErrorOutput"></pre>
                         <pre id="siteStandardOutput"></pre>
                     </div>
-                    <div class="col">
+                    <div class="col section" id="divSiteDomainsAndApps">
                         <div>
-                            <h5>Domain Names</h5>
+                            <h5>Site Domain Names</h5>
                             <pre id="domainNamesStandardOutput"></pre>
                         </div>
                         <div>
-                            <h5>App Names</h5>
+                            <h5>Site App Names</h5>
                             <pre id="appNamesStandardOutput"></pre>
                         </div>
                     </div>
                 </div>
                 <div class="row px-2">
-                    <div class="col">
+                    <div class="col section">
                         <h5>Participant API Keys</h5>
-                        <pre id="participantKeysErrorOutput"></pre>
+                        <pre class="errorDiv" id="participantKeysErrorOutput"></pre>
                         <pre id="participantKeysStandardOutput"></pre>
                     </div>
-                    <div class="col">
+                    <div class="col section">
                         <h5>Participant Encryption Keys</h5>
-                        <pre id="encryptionKeysErrorOutput"></pre>
+                        <pre class="errorDiv" id="encryptionKeysErrorOutput"></pre>
                         <pre id="encryptionKeysStandardOutput"></pre>
                     </div>
                 </div>
                 <div class="row px-2">
-                    <div class="col">
+                    <div class="col section">
                         <h5>Participant Operator Keys</h5>
-                        <pre id="operatorKeysErrorOutput"></pre>
+                        <pre class="errorDiv" id="operatorKeysErrorOutput"></pre>
                         <pre id="operatorKeysStandardOutput"></pre>
                     </div>
-                    <div class="col">
+                    <div class="col section">
                         <h5>Participant Opt-out Webhook</h5>
-                        <pre id="webhooksErrorOutput"></pre>
+                        <pre class="errorDiv" id="webhooksErrorOutput"></pre>
                         <pre id="webhooksStandardOutput"></pre>
                     </div>
                 </div>
