Add functionality to rotate keysets

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -92,6 +92,14 @@
                         d. Keysets belonging to the leaked site itself<br></div>
                         <pre class="errorDiv" id="relatedKeysetsErrorOutput"></pre>
                         <pre id="relatedKeysetsStandardOutput"></pre>
+
+                        <div class="col">
+                            <a href="#" class="btn btn-primary" id="doRotateKeysets">Rotate Keysets</a>
+                            <div id="output">
+                                <pre id="errorOutput"></pre>
+                                <pre id="standardOutput"></pre>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
