Add helper text to explain min age and force option

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -95,6 +95,7 @@
 
                         <div class="col">
                             <a href="#" class="btn btn-primary" id="doRotateKeysets">Rotate Keysets</a>
+                            <div>Note: Once rotated, the participant will need to get a new refresh key to be able to decrypt data.</div>
                             <div id="output">
                                 <pre id="errorOutput"></pre>
                                 <pre id="standardOutput"></pre>
