Add changes to show rotation result

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -97,8 +97,8 @@
                             <a href="#" class="btn btn-primary" id="doRotateKeysets">Rotate Keysets</a>
                             <div>Note: Once rotated, the participant will need to get a new refresh key to be able to decrypt data.</div>
                             <div id="output">
-                                <pre id="errorOutput"></pre>
-                                <pre id="standardOutput"></pre>
+                                <pre id="rotateKeysetsErrorOutput"></pre>
+                                <pre id="rotateKeysetsStandardOutput"></pre>
                             </div>
                         </div>
                     </div>
