Update wordings for the note

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -95,7 +95,12 @@
 
                         <div class="col">
                             <a href="#" class="btn btn-primary" id="doRotateKeysets">Rotate Keysets</a>
-                            <div>Note: Once rotated, the participant will need to get a new refresh key to be able to decrypt data.</div>
+                            <div>
+                                Normally, keys don't become active for 24 hours when rotated, which gives participants 24 hours before they need to call sdk.refresh().
+                                However in this case, rotation will make the new keys active immediately.
+                                This means participants will not be able to decrypt newly created UID tokens until they have called sdk.refresh().
+                                Note that we recommend calling sdk.refresh() once per hour (see <a href="https://unifiedid.com/docs/getting-started/gs-faqs#where-do-i-get-the-decryption-keys">documentation</a>)
+                            </div>
                             <div id="output">
                                 <pre id="rotateKeysetsErrorOutput"></pre>
                                 <pre id="rotateKeysetsStandardOutput"></pre>
